<resources>
    <string name="app_name">驾校助手</string>
    <string name="input_username">手机号</string>
    <string name="input_password">密码</string>
    <string name="login">登录</string>
    <string name="title_activity_rregister_test">RregisterTestActivity</string>
    <string name="action_settings">Settings</string>
    <string name="forgot">忘记密码?</string>
    <string name="register">新用户</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="welcome_words_english">Make learning easy</string>
    <string name="welcome_words_chinese">学车也会变得简单</string>
    <string name="bt_register">注册</string>
    <string name="my_reservation">我的学车</string>


</resources>
