<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cduestc.DriverHelper.activity.LoginActivity">

    <ImageView
        android:id="@+id/iv_background"
        android:scaleType="fitXY"
        android:background="@mipmap/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
    <android.support.v7.widget.Toolbar
        android:id="@+id/tb_bar"
        android:layout_marginTop="@dimen/toolbar_padding_top"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:text="@string/app_name"
            android:layout_gravity="center_horizontal"
            android:textSize="20sp"
            android:textColor="#606062"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </android.support.v7.widget.Toolbar>


    <ImageView
        android:id="@+id/iv_logo"
        android:layout_below="@id/tb_bar"
        android:background="@mipmap/app_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


    <TextView
        android:id="@+id/welcome_words_english"
        android:text="@string/welcome_words_english"
        android:textColor="#606062"
        android:layout_marginTop="4dp"
        android:textSize="25sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/iv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/et_username_wrapper"
        android:layout_below="@id/welcome_words_english"
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_username"
            android:inputType="phone"
            android:drawableLeft="@mipmap/phone_number"
            android:drawableStart="@mipmap/phone_number"
            android:drawablePadding="@dimen/activity_horizontal_margin"
            android:hint="@string/input_username"
            android:background="#00000000"
            android:textColor="#606062"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:background="#e1e1e1"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"

        android:layout_below="@id/et_username_wrapper"
        android:layout_width="match_parent"
        android:layout_height="1dp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/et_password_wrapper"
        android:layout_below="@id/et_username_wrapper"
        android:layout_marginTop="10dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_password"
            android:hint="@string/input_password"
            android:background="#00000000"
            android:maxLines="1"
            android:maxLength="15"
            android:textColor="#606062"
            android:inputType="textPassword"
            android:drawableLeft="@mipmap/password_icon"
            android:drawableStart="@mipmap/password_icon"
            android:drawablePadding="@dimen/activity_horizontal_margin"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:background="#e1e1e1"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_below="@id/et_password_wrapper"
        android:layout_width="match_parent"
        android:layout_height="1dp" />

    <Button
        android:id="@+id/bt_login"
        android:text="@string/login"
        android:layout_margin="30dp"
        android:textColor="#ffffff"
        android:background="@drawable/login_button_style"
        android:layout_below="@id/et_password_wrapper"
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <TextView
        android:id="@+id/tv_register"
        android:textColor="#2c7373"
        android:textSize="16sp"
        android:layout_margin="16dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_forgot"
        android:text="@string/forgot"
        android:textColor="#2c7373"
        android:textSize="16sp"
        android:layout_margin="16dp"
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />



</RelativeLayout>
