<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@mipmap/background"
    tools:context=".activity.RegisterActivity">



    <android.support.v7.widget.Toolbar
        android:id="@+id/tb_bar"
        android:background="#00000000"
        android:layout_marginTop="@dimen/toolbar_padding_top"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:id="@+id/tv_register"
            android:layout_gravity="center_horizontal"
            android:textSize="20sp"
            android:text="@string/bt_register"
            android:textColor="#606062"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </android.support.v7.widget.Toolbar>



    <LinearLayout
        android:id="@+id/ll_login_info"
        android:layout_marginTop="16dp"
        android:layout_below="@id/tb_bar"
        android:orientation="horizontal"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <android.support.design.widget.TextInputLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_phone"
                android:textColor="#606062"
                android:textSize="16sp"
                android:hint="@string/input_username"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="phone"
                />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:hint="姓名"
                android:textSize="16sp"
                android:layout_height="match_parent"
                android:textColor="#606062"
                />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/et_password_wrapper"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_below="@id/ll_login_info"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="#606062"
            android:hint="@string/input_password"
            android:inputType="textPassword"
            android:textSize="16sp"
            />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/et_idNum_wrapper"
        android:layout_below="@id/et_password_wrapper"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_idNum"
            android:inputType="number"
            android:textColor="#606062"
            android:hint="身份证号"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </android.support.design.widget.TextInputLayout>



    <android.support.design.widget.TextInputLayout
        android:id="@+id/et_address_wrapper"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_below="@id/et_idNum_wrapper"
        android:layout_height="45dp">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_address"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:textColor="#606062"
            android:textSize="16sp"
            android:hint="住址(街道,默认为驾校所在省市)"
            />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:id="@+id/ll_province"
        android:orientation="horizontal"
        android:layout_margin="16dp"
        android:layout_below="@id/et_address_wrapper"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:text="所在省:"
            android:textSize="16sp"
            android:textColor="#606062"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/sp_province"
            android:layout_weight="1"
            android:layout_width="0dp"
            style="@style/AlertDialog.AppCompat.Light"
            app:theme="@style/Theme.AppCompat.DayNight"
            android:layout_height="match_parent"/>

        <TextView
            android:text="所在市:"
            android:textSize="16sp"
            android:textColor="#606062"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/sp_city"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="45dp"/>
    </LinearLayout>


   <LinearLayout
       android:id="@+id/ll_schools"
       android:layout_marginLeft="16dp"
       android:layout_marginRight="16dp"
       android:orientation="horizontal"
       android:layout_below="@id/ll_province"
       android:layout_width="match_parent"
       android:layout_height="wrap_content">
       <TextView
           android:text="该地区驾校:"
           android:textSize="16sp"
           android:textColor="#606062"
           android:layout_gravity="center_vertical"
           android:layout_width="wrap_content"

           android:layout_height="wrap_content" />

       <android.support.v7.widget.AppCompatSpinner
           android:id="@+id/sp_schools"
           android:layout_width="match_parent"
           android:layout_height="45dp"/>
   </LinearLayout>


    <Button
        android:id="@+id/bt_register"
        android:layout_below="@id/ll_schools"
        android:background="@drawable/login_button_style"
        android:text="@string/bt_register"
        android:textColor="#ffffff"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />



</RelativeLayout>
